conectando com o bd testando rota simples instalando prisma criando migrations e adicionando documentacao no swagger
