# src/controllers/authController.ts
@@ -1,0 +1,33 @@
+import { Request, Response, RequestHandler } from 'express';
+import bcrypt from 'bcryptjs';
+import jwt from 'jsonwebtoken';
+import { pool } from '../config/db';
+
+export const login: RequestHandler = async (req, res, next) => {
+  const { email, password } = req.body;
+  try {
+    const result = await pool.query('SELECT * FROM "User" WHERE "email" = $1', [email]);
+    if (result.rows.length === 0) {
+      res.status(401).json({ message: 'Usuário não encontrado' });
+      return;
+    }
+
+    const user = result.rows[0];
+    const isPasswordValid = await bcrypt.compare(password, user.passwordHash);
+    if (!isPasswordValid) {
+      res.status(401).json({ message: 'Senha incorreta' });
+      return;
+    }
+
+    const token = jwt.sign(
+      { userId: user.id },
+      process.env.JWT_SECRET || 'secret',
+      { expiresIn: '1h' }
+    );
+
+    res.json({ message: 'Login bem-sucedido', token });
+  } catch (error) {
+    console.error(error);
+    res.status(500).json({ message: 'Erro interno do servidor' });
+  }
+};
